// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutators moveActionUp() should move action up 1`] = `
Object {
  "nodeA": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Move me up",
          "type": "send_msg",
          "uuid": "actionB",
        },
        Object {
          "text": "The first message",
          "type": "send_msg",
          "uuid": "actionA",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeB",
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    "ui": Object {
      "position": Object {
        "bottom": 190,
        "left": 100,
        "right": 300,
        "top": 100,
      },
    },
  },
  "nodeB": Object {
    "inboundConnections": Object {
      "exitA": "nodeA",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    "ui": Object {
      "position": Object {
        "bottom": 290,
        "left": 200,
        "right": 500,
        "top": 150,
      },
    },
  },
  "nodeC": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
    "ui": Object {
      "position": Object {
        "bottom": 390,
        "left": 300,
        "right": 600,
        "top": 210,
      },
    },
  },
}
`;

exports[`mutators should addAction 1`] = `
Object {
  "nodeA": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "The first message",
          "type": "send_msg",
          "uuid": "actionA",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeB",
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    "ui": Object {
      "position": Object {
        "bottom": 190,
        "left": 100,
        "right": 300,
        "top": 100,
      },
    },
  },
  "nodeB": Object {
    "inboundConnections": Object {
      "exitA": "nodeA",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hello World",
          "type": "send_msg",
          "uuid": "actionB",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    "ui": Object {
      "position": Object {
        "bottom": 290,
        "left": 200,
        "right": 500,
        "top": 150,
      },
    },
  },
  "nodeC": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
    "ui": Object {
      "position": Object {
        "bottom": 390,
        "left": 300,
        "right": 600,
        "top": 210,
      },
    },
  },
}
`;

exports[`mutators should addNode 1`] = `
Object {
  "nodeA": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "The first message",
          "type": "send_msg",
          "uuid": "actionA",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeD",
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    "ui": Object {
      "position": Object {
        "bottom": 190,
        "left": 100,
        "right": 300,
        "top": 100,
      },
    },
  },
  "nodeB": Object {
    "inboundConnections": Object {
      "exitA": "nodeA",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    "ui": Object {
      "position": Object {
        "bottom": 290,
        "left": 200,
        "right": 500,
        "top": 150,
      },
    },
  },
  "nodeC": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
    "ui": Object {
      "position": Object {
        "bottom": 390,
        "left": 300,
        "right": 600,
        "top": 210,
      },
    },
  },
  "nodeD": Object {
    "inboundConnections": Object {
      "exitA": "nodeA",
    },
    "node": Object {
      "exits": Array [],
      "uuid": "nodeD",
    },
    "ui": Object {
      "position": Object {
        "left": 400,
        "top": 400,
      },
    },
  },
}
`;

exports[`mutators should removeAction 1`] = `
Object {
  "nodeA": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeB",
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    "ui": Object {
      "position": Object {
        "bottom": 190,
        "left": 100,
        "right": 300,
        "top": 100,
      },
    },
  },
  "nodeB": Object {
    "inboundConnections": Object {
      "exitA": "nodeA",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    "ui": Object {
      "position": Object {
        "bottom": 290,
        "left": 200,
        "right": 500,
        "top": 150,
      },
    },
  },
  "nodeC": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
    "ui": Object {
      "position": Object {
        "bottom": 390,
        "left": 300,
        "right": 600,
        "top": 210,
      },
    },
  },
}
`;

exports[`mutators should removeConnection 1`] = `
Object {
  "nodeA": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "The first message",
          "type": "send_msg",
          "uuid": "actionA",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    "ui": Object {
      "position": Object {
        "bottom": 190,
        "left": 100,
        "right": 300,
        "top": 100,
      },
    },
  },
  "nodeB": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    "ui": Object {
      "position": Object {
        "bottom": 290,
        "left": 200,
        "right": 500,
        "top": 150,
      },
    },
  },
  "nodeC": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
    "ui": Object {
      "position": Object {
        "bottom": 390,
        "left": 300,
        "right": 600,
        "top": 210,
      },
    },
  },
}
`;

exports[`mutators should updateLocalizations 1`] = `
Object {
  "_ui": Object {
    "languages": null,
    "nodes": Object {},
  },
  "language": "eng",
  "localization": Object {
    "spa": Object {
      "actionA": Array [
        Object {
          "text": "Hola Mundo!",
        },
      ],
    },
  },
  "name": "Test Flow",
  "nodes": Array [
    Object {
      "actions": Array [
        Object {
          "text": "The first message",
          "type": "send_msg",
          "uuid": "actionA",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeB",
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
  ],
  "uuid": "flowA",
}
`;

exports[`mutators should updateLocalizations 2`] = `
Object {
  "_ui": Object {
    "languages": null,
    "nodes": Object {},
  },
  "language": "eng",
  "localization": Object {
    "spa": Object {},
  },
  "name": "Test Flow",
  "nodes": Array [
    Object {
      "actions": Array [
        Object {
          "text": "The first message",
          "type": "send_msg",
          "uuid": "actionA",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeB",
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
  ],
  "uuid": "flowA",
}
`;

exports[`mutators updateAction() should update an existing action 1`] = `
Object {
  "nodeA": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "The first message",
          "type": "send_msg",
          "uuid": "actionA",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeB",
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    "ui": Object {
      "position": Object {
        "bottom": 190,
        "left": 100,
        "right": 300,
        "top": 100,
      },
    },
  },
  "nodeB": Object {
    "inboundConnections": Object {
      "exitA": "nodeA",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Goodbye World",
          "type": "send_msg",
          "uuid": "actionB",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "name": null,
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    "ui": Object {
      "position": Object {
        "bottom": 290,
        "left": 200,
        "right": 500,
        "top": 150,
      },
    },
  },
  "nodeC": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
    "ui": Object {
      "position": Object {
        "bottom": 390,
        "left": 300,
        "right": 600,
        "top": 210,
      },
    },
  },
}
`;

exports[`mutators updateConnection() should allow clearing connection 1`] = `
Object {
  "nodeA": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "The first message",
          "type": "send_msg",
          "uuid": "actionA",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    "ui": Object {
      "position": Object {
        "bottom": 190,
        "left": 100,
        "right": 300,
        "top": 100,
      },
    },
  },
  "nodeB": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    "ui": Object {
      "position": Object {
        "bottom": 290,
        "left": 200,
        "right": 500,
        "top": 150,
      },
    },
  },
  "nodeC": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
    "ui": Object {
      "position": Object {
        "bottom": 390,
        "left": 300,
        "right": 600,
        "top": 210,
      },
    },
  },
}
`;

exports[`mutators updateConnection() should update connections 1`] = `
Object {
  "nodeA": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "The first message",
          "type": "send_msg",
          "uuid": "actionA",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    "ui": Object {
      "position": Object {
        "bottom": 190,
        "left": 100,
        "right": 300,
        "top": 100,
      },
    },
  },
  "nodeB": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    "ui": Object {
      "position": Object {
        "bottom": 290,
        "left": 200,
        "right": 500,
        "top": 150,
      },
    },
  },
  "nodeC": Object {
    "inboundConnections": Object {
      "exitA": "nodeA",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
    "ui": Object {
      "position": Object {
        "bottom": 390,
        "left": 300,
        "right": 600,
        "top": 210,
      },
    },
  },
}
`;

exports[`mutators updateConnection() should update without a previous destination 1`] = `
Object {
  "nodeA": Object {
    "inboundConnections": Object {
      "exitC": "nodeC",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "The first message",
          "type": "send_msg",
          "uuid": "actionA",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeB",
          "uuid": "exitA",
        },
      ],
      "uuid": "nodeA",
    },
    "ui": Object {
      "position": Object {
        "bottom": 190,
        "left": 100,
        "right": 300,
        "top": 100,
      },
    },
  },
  "nodeB": Object {
    "inboundConnections": Object {
      "exitA": "nodeA",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeC",
          "uuid": "exitB",
        },
      ],
      "uuid": "nodeB",
    },
    "ui": Object {
      "position": Object {
        "bottom": 290,
        "left": 200,
        "right": 500,
        "top": 150,
      },
    },
  },
  "nodeC": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "nodeA",
          "uuid": "exitC",
        },
      ],
      "uuid": "nodeC",
    },
    "ui": Object {
      "position": Object {
        "bottom": 390,
        "left": 300,
        "right": 600,
        "top": 210,
      },
    },
  },
}
`;
